--- a/src/EmptyWebApp1/bower.json
+++ b/src/EmptyWebApp1/bower.json
@@ -1,19 +1,29 @@
 {
-  "name": "EmptyWebApp1",
-  "version": "0.0.0",
-  "authors": [
-    "Balamurugan Chirtsabesan <balachirt@outlook.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.3.1"
-  }
+    "name": "EmptyWebApp1",
+    "version": "0.0.0",
+    "authors": [
+        "Balamurugan Chirtsabesan <balachirt@outlook.com>"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "jquery": "~2.1.1",
+        "bootstrap": "~3.3.1"
+    },
+    "exportsOverride": {
+        "bootstrap": {
+            "js": "dist/js/*.*",
+            "css": "dist/css/*.*",
+            "fonts": "dist/fonts/*.*"
+        },
+        "jquery": {
+            "js": "dist/jquery.{js,min.js,min.map}"
+        }
+    }
 }
